<resources>
    <string name="app_name">DropMe</string>
    <string name="click" translatable="false">Click</string>
    <string name="process" translatable="false">Process</string>
    <string name="choose_image" translatable="false">Choose Image</string>
    <string name="magic_is_happening" translatable="false">Magic is Happening in the Cloud…☁️</string>
    <string name="magic_about_to_happen" translatable="false">Throwing image above the clouds…☁️</string>
    <string name="retry" translatable="false">Retry</string>
    <string name="biggest_question" translatable="false">Internet?\nYou There?</string>
    <string name="tap_to_begin" translatable="false">Tap to Begin</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="open_settings" translatable="false">open settings</string>
    <string name="sign_out" translatable="false">Sign Out</string>
    <string name="devMail" translatable="false">connectwithspandan@gmail.com</string>
    <string name="devName" translatable="false">Spandan Saxena</string>
    <string name="about_app" translatable="false">About DropMe</string>
    <string name="next" translatable="false">NEXT</string>
    <string name="skip" translatable="false">SKIP</string>
    <string name="capture_on_your_phone" translatable="false">Capture on your phone</string>
    <string name="magically_transfer_them_on_your_desktop" translatable="false">Magically transfer them on your desktop</string>
    <string name="just_before_we_begin" translatable="false">Just Before we Begin…</string>
    <string name="gotcha" translatable="false">GOT IT</string>
    <string name="how_to_grab" translatable="false">Open <i><b>https://bit.ly/dropme-web</b></i> on your desktop to grab your images.\n\n<i>Tap for More Info</i></string>
    <string name="get_images_tip" translatable="false">To get all your transmitted images, just open <b>https://bit.ly/dropme-web</b> on your Desktop/Laptop</string>
    <string name="get_images_tip_title" translatable="false">Open the DropMe Web Client on Your Desktop</string>
    <string name="aboutUsDescription">Hello there, hope you all doing well. This time we are back again with another tool to help you. We humans always try to make things more efficient and easier to use. It’s the basic definition of technological advancement. This time we also tried to do so, and here is the result of our efforts – “Drop Me”. “\n\nIf something is working, doesn’t mean that it can’t be improved. There’s always a chance of improvement in everything”. This thought made us to develop this project. So, what our project does? And how it’s useful for us?\n\n Well, let me explain it using a very common example, let’s assume that you saw a beautiful bird and you want to use its image in your project but without the background. Then what would you Do? (Remainder- your project is on Desktop). \n\nApproach 1 (Naive approach)-\n 1. click a picture of that bird using your phone.\n 2. open WhatsApp in your phone.\n 3. Send the picture to any friend.\n 4. Open WhatsApp web in your desktop.\n 5. Scan QR code.\n 6. Download the picture of the bird.\n 7. Open Google in your desktop.\n 8. Search for online Background remover.\n 9. Upload the image in it.\n 10. Download the processed image without the background.\n 11. Use the downloaded image in your project.\n \n\nApproach 2 (using Drop Me)-\n 1. Open Drop Me.\n 2. Click picture of the bird.\n 3. Click “Process” to remove the background\n 4. Slide the image.\n 5. Open Drop me on your desktop.\n 6. Download the image.\n 7. Use it in your project\n \nAnd that’s how you reduced 4 steps form your worklist.\n \nThis is Drop Me. We made an app that can accurately remove the background of any image. You can remove background of your saved images or you can click the image in real time and remove its background. Further you can transfer your file through any device in real time, without any delay.\n \n This reduced 3-4 steps costs you 20-30 sec, though it doesn’t sound like a big-time duration, but, in this evolutionary and moving world, every second’s count, technologies are working at ultra-speed, as compared to few years back. Nowadays, people don’t want to waste their 20-30 sec for a work that can be done in 10 sec. Live example for this is SSD. You can tell the difference between the speed of a normal HDD and nowadays SSD. And that’s how our “Drop Me” helps you. \n\n We know the value of time, therefore we decided to devote part of our time in developing something that can save others time. we hope that our project can contribute to your precious time and can reduce your work a little. \n\n Thanks for spending your precious time reading – “About Us”. We will keep trying to search for ways through which we can help you all. See you all with some more amazing projects. Till then, Keep enjoying our project.</string>
    <string-array name="greetings">
        <item>Welcome to DropMe!</item>
        <item>Hello.</item>
        <item>नमस्ते|</item>
        <item>Hola</item>
        <item>Olá</item>
        <item>こんにちは</item>
        <item>你好</item>
        <item>Salve</item>
        <item>హలో</item>
        <item>안녕하세요</item>
    </string-array>
    <string-array name="tooltip">
        <item>Swipe Up to Transmit to DropMe Desktop.</item>
        <item>Swipe Down to Delete from DropMe Desktop.</item>
    </string-array>
</resources>