<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/background"
    android:animateLayoutChanges="true"
    android:background="@color/black"
    tools:context=".Prefrences">

    <com.nvanbenschoten.motion.ParallaxImageView
        android:id="@+id/userMotion"
        style="@style/profileBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        app:motionIntensity="1.5"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/accPhoto"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:elevation="30dp"
        android:src="@drawable/ic_launcher_background"
        android:scaleType="fitCenter"
        app:riv_corner_radius="8dp"
        app:riv_border_width="3dp"
        app:riv_border_color="#4A4D6C"
        app:riv_mutate_background="true"
        android:contentDescription="@string/choose_image" />

    <androidx.cardview.widget.CardView
        android:id="@+id/nameHolder"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:elevation="12dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#04051C"
        android:layout_below="@+id/accPhoto"
        app:cardCornerRadius="25dp"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"
        android:shape="rectangle"
        android:thicknessRatio="1.9">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_drool">
        <TextView
            android:id="@+id/accName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:textSize="28sp"
            android:fontFamily="@font/productsansbold"
            android:textColor="@color/amber_50"
            android:text="@string/devName" />
         <TextView
                android:id="@+id/accEmail"
                android:layout_width="wrap_content"
                android:layout_below="@+id/accName"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:layout_marginTop="30dp"
                android:textSize="22sp"
                android:fontFamily="@font/productsans"
                android:textColor="@color/amber_50"
                android:text="@string/devMail" />
            <Button
                android:id="@+id/signOut"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/accEmail"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:text="@string/sign_out"
                android:textColor="@color/black"
                android:fontFamily="@font/productsansbold"
                android:backgroundTint="@color/amber_50"
                android:layout_marginTop="10dp"/>
            <Button
                android:id="@+id/aboutDropMe"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signOut"
                android:transitionName="imageTransition"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:text="@string/about_app"
                android:textColor="@color/black"
                android:fontFamily="@font/productsansbold"
                android:backgroundTint="@color/amber_50"
                android:layout_marginTop="5dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <View
        android:layout_below="@+id/nameHolder"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="-40dp"
        android:background="#1B1E5B"/>
</RelativeLayout>